# autd3-old-monorepo

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  NOTICE  README.md  build.ps1  build.py  clear.ps1  codecov.yml  configuration.tcl  proj_gen.tcl  sim.ps1  sim.tcl
bench/: CMakeLists.txt  bench.cpp  utils.hpp
bench/gain/: CMakeLists.txt  holo.cpp  primitive.cpp
capi/: .gitignore  CMakeLists.txt  Cargo.toml  Cross.toml  ThirdPartyNotice.txt
capi-old/extra_simulator/: CMakeLists.txt  simulator.h
capi-old/link_remote_soem/: CMakeLists.txt  remote_soem_link.h
capi-old/link_remote_twincat/: CMakeLists.txt
capi-old/link_twincat/: CMakeLists.txt  twincat_link.h
capi-old/modulation_audio_file/: CMakeLists.txt
capi/autd3capi/: Cargo.toml  build.rs
capi/autd3capi-backend-cuda/: Cargo.toml  build.rs
capi/autd3capi-common/: Cargo.toml
capi/autd3capi-def/: Cargo.toml  README.md  build.rs
capi/autd3capi-gain-holo/: Cargo.toml  build.rs
capi/autd3capi-geometry-viewer/: Cargo.toml
capi/autd3capi-link-simulator/: Cargo.toml
capi/autd3capi-link-soem/: Cargo.toml
capi/autd3capi-link-twincat/: Cargo.toml  build.rs
capi/autd3capi-link-visualizer/: Cargo.toml
capi/autd3capi-modulation-audio-file/: Cargo.toml  build.rs
capi/autd3capi-simulator/: Cargo.toml
capi/autd3capi-wrapper-generator/: Cargo.toml  README.md
capi/base/: CMakeLists.txt  autd3_c_api.h  c_api.cpp  custom.hpp  custom_sink.hpp  gain_stm.hpp  grouped.hpp  header.h  header.hpp  impl.hpp  lpf_wrapper.hpp  wrapper.hpp  wrapper_link.hpp
capi/base_legacy/: CMakeLists.txt  c_api.cpp
capi/example/: CMakeLists.txt  debug.c  emulator.c  geometry_viewer.c  remote_soem.c  remote_twincat.c  runner.h  simulator_client.c  simulator_server.c  soem.c  twincat.c
capi/extra_geometry_viewer/: CMakeLists.txt  c_api.cpp  geometry_viewer.h
capi/extra_simulator/: CMakeLists.txt  c_api.cpp  simulator.h
capi/gain_holo/: CMakeLists.txt  c_api.cpp  c_api_legacy.cpp  holo_gain.h  impl.hpp
capi/link_bundle/: CMakeLists.txt  bundle_link.h  c_api.cpp
capi/link_debug/: CMakeLists.txt  c_api.cpp  debug_link.h
capi/link_emulator/: CMakeLists.txt  c_api.cpp  emulator_link.h
capi/link_remote_simulator/: CMakeLists.txt  c_api.cpp
capi/link_remote_soem/: CMakeLists.txt  c_api.cpp  remote_soem_link.h
capi/link_remote_twincat/: CMakeLists.txt  c_api.cpp  remote_twincat_link.h
capi/link_simulator/: CMakeLists.txt  c_api.cpp  simulator_link.h
capi/link_soem/: CMakeLists.txt  c_api.cpp  custom_sink.hpp  soem_link.h
capi/link_twincat/: CMakeLists.txt  c_api.cpp  twincat_link.h
capi/modulation_audio_file/: CMakeLists.txt  audio_file_modulation.h  c_api.cpp
capi/wrapper-generator/: Cargo.toml
cpp/: .gitignore  CMakeLists.txt  README.md  build-aarch64.sh  build-arm32.sh  build.ps1  build.sh  spdlog.hpp
cpp/examples/: CMakeLists.txt  debug.cpp  freq_config.cpp  geometry_viewer.cpp  group.cpp  group_gain.cpp  remote_soem.cpp  remote_twincat.cpp  runner.hpp  simulator.cpp  simulator_client.cpp  simulator_server.cpp  soem.cpp  twincat.cpp  util.hpp  visualizer.cpp
cpp/include/: autd3.hpp
cpp/link/: CMakeLists.txt
cpp/tests/: CMakeLists.txt  gtest.cmake  main.cpp  utils.hpp
examples/: .gitignore  CMakeLists.txt  Cargo.toml  README.md  custom_device.cpp  debug.cpp  emem.cpp  emulator.cpp  freq_config.cpp  geometry_viewer.cpp  geometry_viewer_example.cpp  main.cpp  remote_simulator.cpp  remote_soem.cpp  remote_twincat.cpp  runner.hpp  simulator.cpp  simulator_client.cpp  simulator_client_remote.cpp  simulator_server.cpp  soem.cpp  twincat.cpp  util.hpp
examples/examples/: async.rs  test_runner.rs
examples/src/: async.rs  debug.rs  freq_config.rs  geometry_viewer.rs  lightweight.rs  monitor.rs  remote_soem.rs  remote_twincat.rs  simulator_client.rs  simulator_server.rs  soem.rs  test_runner.rs  twincat.rs
examples/tests/: advanced.hpp  bessel.hpp  flag.hpp  focus.hpp  focus_stm.hpp  gain_stm.hpp  group.hpp  holo.hpp  mod_audio_file.hpp  plane.hpp  point_stm.hpp  soft_stm.hpp
license-checker/: Cargo.toml
license-checker/licenses/: 0BSD.txt  ISC.txt  Unicode-DFS-2016.txt
license-checker/src/: diff.rs  license_file.rs  main.rs  npm.rs
python/: .coveragerc  .gitignore  MANIFEST.in  NOTICE  README.md  build.ps1  build.sh  download_bin.py  empty.cpp  pyproject.toml  run_test.ps1  run_test.sh  setup.cfg  setup.cfg.linux-aarch64  setup.cfg.linux-armv7  setup.cfg.linux-x86_64  setup.cfg.mac-aarch64  setup.cfg.mac-x86_64  setup.cfg.template  setup.cfg.win-amd64  setup.py
python/example/: README.md  debug.py  emulator.py  freq_config.py  geometry_viewer.py  group.py  group_gain.py  remote_soem.py  remote_twincat.py  simulator.py  simulator_client.py  simulator_server.py  soem.py  twincat.py  visualizer.py
python/pyautd3/: __init__.py  autd.py  autd_error.py  debug_level.py  drive.py  emit_intensity.py  geometry.py  log_level.py  phase.py  sampling_config.py  sync_mode.py  timer_strategy.py
python/tests/: conftest.py  test_autd.py  test_emit_intensity.py  test_geometry.py  test_phase.py  test_sampling_config.py
src/: .gitignore  CMakeLists.txt  Cargo.toml  README.md  app.c  controller.cpp  cross-aarch64.sh  cross-arm32.sh  soft_stm.cpp  spdlog.hpp
src/autd3-backend-arrayfire/: Cargo.toml  README.md
src/autd3-backend-cuda/: Cargo.toml  README.md  build.rs
src/autd3-core/: Cargo.toml
src/autd3-derive/: Cargo.toml  README.md
src/autd3-driver/: Cargo.toml  README.md
src/autd3-examples/: Cargo.toml
src/autd3-firmware-emulator/: Cargo.toml  README.md
src/autd3-gain-holo/: Cargo.toml  README.md
src/autd3-geometry-viewer/: Cargo.toml  README.md
src/autd3-link-monitor/: Cargo.toml  README.md
src/autd3-link-simulator/: Cargo.toml  README.md  boost_wrap.h  build.rs
src/autd3-link-soem/: .gitignore  Cargo.toml  README.md  build.rs
src/autd3-link-twincat/: Cargo.toml  LICENSE  README.md  ads_c.cpp  ads_c.h  build.rs
src/autd3-link-visualizer/: Cargo.toml  a.rs  (+1 more)
tests/: CMakeLists.txt  autd3_device_test.cpp  emulator_link.hpp  null_link.hpp  test.cpp  test_utils.hpp
(+3275 files in other folders)
