add_subdirectory(base)

if(BUILD_LINK_SOEM)
  add_subdirectory(link_soem)
endif()
if(BUILD_LINK_TWINCAT AND WIN32)
  add_subdirectory(link_twincat)
endif()
if(BUILD_LINK_REMOTE_TWINCAT)
  add_subdirectory(link_remote_twincat)
endif()
if(BUILD_LINK_REMOTE_SOEM)
  add_subdirectory(link_remote_soem)
endif()
if(BUILD_LINK_DEBUG)
  add_subdirectory(link_debug)
endif()
if(BUILD_GAIN_HOLO)
  add_subdirectory(gain_holo)
endif()
if(BUILD_MODULATION_AUDIO_FILE)
  add_subdirectory(modulation_audio_file)
endif()
if(BUILD_LINK_SIMULATOR)
  add_subdirectory(link_simulator)
endif()
if(BUILD_GEOMETRY_VIEWER)
  add_subdirectory(extra_geometry_viewer)
endif()
if(BUILD_SIMULATOR)
  add_subdirectory(extra_simulator)
endif()
if(BUILD_EXAMPLES)
  add_subdirectory(example)
endif()
