[workspace]

members = [
    "wrapper-generator",
    "autd3capi",
    "autd3capi-gain-holo",
    "autd3capi-link-simulator",
    "autd3capi-link-soem",
    "autd3capi-link-twincat",
    "autd3capi-modulation-audio-file",
    "autd3capi-simulator",
    "autd3capi-geometry-viewer",
]
default-members = [
    "wrapper-generator",
    "autd3capi",
    "autd3capi-gain-holo",
    "autd3capi-link-simulator",
    "autd3capi-link-soem",
    "autd3capi-link-twincat",
]

[profile.release]
strip = true
lto = true
codegen-units = 1
